fixed wrapping issue in code blocks

--- a/src/styles/text.styl
+++ b/src/styles/text.styl
@@ -16,6 +16,7 @@ pre code
   display block
   overflow auto
   padding 15px 5px
+  white-space normal
 
 .lead
   font-size 22px
